<resources>
    <string name="app_name">Financial_app</string>
    <string name="main_name">Мои финансы</string>
    <string name="add_money">Добавить доход</string>
    <string name="sub_money">Добавить расход</string>
    <string name="accounts">Счета</string>
    <string name="categories">Категории</string>
    <string name="regular_pays">Регулярные платежи</string>
    <string name="adding_money">Добавление дохода</string>
    <string name="subtraction_money">Добавление расхода</string>
    <string name="categories_editing">Категории</string>
    <string name="hint_add">Введите сумму</string>
    <string name="add">Добавить</string>
</resources>