<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/aladin"
        android:text="@string/main_name"
        android:textColor="#000000"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <Button
            android:id="@+id/button_add"
            android:layout_width="match_parent"
            android:layout_height="60sp"
            android:layout_marginStart="6sp"
            android:layout_marginEnd="6sp"
            android:backgroundTint="@color/buttons_color"
            android:fontFamily="cursive"
            android:text="@string/add_money"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            app:cornerRadius="16dp"
            app:strokeWidth="3sp"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/button_sub"
            android:layout_width="match_parent"
            android:layout_height="60sp"
            android:layout_marginStart="6sp"
            android:layout_marginEnd="6sp"
            android:backgroundTint="@color/buttons_color"
            android:fontFamily="cursive"
            android:text="@string/sub_money"
            android:textSize="18sp"
            app:cornerRadius="16dp"
            app:strokeWidth="3sp"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/button_cat"
            android:layout_width="match_parent"
            android:layout_height="60sp"
            android:layout_marginStart="6sp"
            android:layout_marginEnd="6sp"
            android:backgroundTint="@color/buttons_color"
            android:fontFamily="cursive"
            android:text="@string/categories"
            android:textSize="18sp"
            app:cornerRadius="16dp"
            app:strokeWidth="3sp"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="60sp"
            android:layout_marginStart="6sp"
            android:layout_marginEnd="6sp"
            android:backgroundTint="@color/buttons_color"
            android:fontFamily="cursive"
            android:text="@string/accounts"
            android:textSize="18sp"
            app:cornerRadius="16dp"
            app:strokeWidth="3sp"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="60sp"
            android:layout_marginStart="6sp"
            android:layout_marginEnd="6sp"
            android:backgroundTint="@color/buttons_color"
            android:fontFamily="cursive"
            android:text="@string/regular_pays"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            app:cornerRadius="16dp"
            app:strokeWidth="3sp"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>